<resources>
    <string name="app_name">Bankonrakrod</string>
    <string name="your_car">Your Cars</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="register">Register</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="customer">Customer</string>
    <string name="brand">Brand</string>
    <string name="car_name">Car Name</string>
    <string name="car_number">Car Number</string>
    <string name="none">-</string>
    <string name="service_name">Service Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="bath">Bath</string>
    <string name="service">Service</string>
    <string name="personal">Personal Data</string>
    <string name="add_car">Add Cars</string>
    <string name="chose">Chose your cars</string>
    <string name="sum">Sum</string>
</resources>
