<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  style="@style/container">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/header"/>
        <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"

                style="@style/edit"/>
        <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/edit"/>
        <EditText
                android:id="@+id/editConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                style="@style/edit"/>
        <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                style="@style/edit"/>
        <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                style="@style/edit"/>
        <GridLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_columnWeight="1"
                    android:text="@string/your_car"
                    style="@style/sub"/>
            <ImageView
                    android:id="@+id/imageAdd"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_columnWeight="1"
                    android:src="@drawable/ic_plus"
                    android:padding="5dp"/>
        </GridLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp">

        </android.support.v7.widget.RecyclerView>
        <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:background="@drawable/button"
                style="@style/button"/>
    </LinearLayout>
</ScrollView>