<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BookActivity">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        style="@style/sub"
                        android:text="@string/name"/>
                <TextView
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="3"
                        android:textAlignment="center"
                        android:text="@string/none"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        style="@style/sub"
                        android:text="@string/date"/>
                <TextView
                        android:id="@+id/textDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="3"
                        android:textAlignment="center"
                        android:text="@string/none"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        style="@style/sub"
                        android:text="@string/time"/>
                <TextView
                        android:id="@+id/textTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="3"
                        android:textAlignment="center"
                        android:text="@string/none"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        style="@style/sub"
                        android:text="@string/brand"/>

                <TextView
                        android:id="@+id/textCarBrand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="3"
                        android:textAlignment="center"
                        android:text="@string/none"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        style="@style/sub"
                        android:text="@string/car_name"/>
                <TextView
                        android:id="@+id/textCarName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="3"
                        android:textAlignment="center"
                        android:text="@string/none"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        style="@style/sub"
                        android:text="@string/car_number"/>
                <TextView
                        android:id="@+id/textCarNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="3"
                        android:textAlignment="center"
                        android:text="@string/none"/>

        </GridLayout>
</LinearLayout>