<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/container">
   <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="none">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                style="@style/header"/>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:hint="@string/name"/>
            <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:hint="@string/name"
                    style="@style/sub"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:hint="@string/phone"/>
            <TextView
                    android:id="@+id/textNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:hint="@string/phone"
                    style="@style/sub"/>
        </GridLayout>
        <GridLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_columnWeight="1"
                    android:text="@string/your_car"
                    style="@style/sub"/>
            <ImageView
                    android:id="@+id/imageAdd"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_columnWeight="1"
                    android:src="@drawable/ic_plus"
                    android:padding="5dp"/>
        </GridLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</ScrollView>
</LinearLayout>