<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/item"
              android:layout_marginBottom="5dp">
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:textAlignment="center"
                android:text="@string/time"
                style="@style/sub"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="2"
                android:textAlignment="center"
                android:text="@string/status"
                style="@style/sub"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="3"
                android:textAlignment="center"
                android:text="@string/customer"
                style="@style/sub"/>
        <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:textAlignment="center"
                android:text="@string/time"/>
        <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_columnWeight="2"
                android:textAlignment="center"
                android:text="@string/status"/>
        <TextView
                android:id="@+id/textCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="3"
                android:textAlignment="center"
                android:text="@string/customer"/>
        <TextView
                android:id="@+id/textStatusColor"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_columnSpan="3"/>
    </GridLayout>
</LinearLayout>