<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:scrollbars="none"
              android:padding="20dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/bankonrakrod"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header"
                android:textAlignment="center"
                android:text="@string/login"/>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_email_black_24dp"/>
                <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edit"
                        android:layout_columnWeight="9"
                        style="@style/edit"/>
        </GridLayout>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="2">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_dialpad_black_24dp"/>
            <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_columnWeight="8"
                    android:background="@drawable/edit"
                    style="@style/edit"/>
        </GridLayout>
        <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_gravity="center"
                style="@style/button"
                android:text="@string/login"/>
    </LinearLayout>
</ScrollView>