<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="15dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@color/colorPrimary">
                        <TextView
                                android:id="@+id/textTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20dp"
                                android:padding="5dp"
                                android:textColor="@color/colorAccent"
                                android:text="@string/app_name"/>
                        <ImageView
                                android:id="@+id/imgDelete"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="right|center_vertical"
                                android:src="@drawable/ic_close"/>
                </FrameLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical">
                        <TextView
                                android:id="@+id/textService"
                                android:textSize="18dp"
                                android:text="@string/app_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:orientation="horizontal">
                                <TextView
                                        android:textSize="16dp"
                                        android:textStyle="bold"
                                        android:text="@string/sum"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0"/>
                                <TextView
                                        android:id="@+id/textSum"
                                        android:textSize="16dp"
                                        android:text="@string/sum"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAlignment="center"
                                        android:layout_weight="1"/>
                                <TextView
                                        android:textSize="16dp"
                                        android:textStyle="bold"
                                        android:text="@string/bath"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"/>
                        </LinearLayout>
                </LinearLayout>
        </LinearLayout>
</android.support.v7.widget.CardView>